fix: issue code-charity#1971 - Ensure 'Add To Blocklist' button for channel is visible in dark mode
The button to add a channel to the blocklist is there, but is not visible in dark mode. Duplicate the 'black' style as 'dark' to solve issue

--- a/js&css/extension/www.youtube.com/styles.css
+++ b/js&css/extension/www.youtube.com/styles.css
@@ -283,7 +283,7 @@ body.no-scroll .it-player-button--tooltip {
 	fill: var(--yt-spec-icon-inactive);
 	align-self: center;
 }
-  
+
 .it-playlist-copy-video-id:hover::after {
 	content: attr(data-tooltip);
 	transform: translateX(-50%);
@@ -732,8 +732,8 @@ html[it-theme=plain] #cinematics {
 }
 
 /* Background-color update */
-html[it-theme]:not([it-theme=default]) ytd-app, 
-html[it-theme]:not([it-theme=default]) ytd-browse-view, 
+html[it-theme]:not([it-theme=default]) ytd-app,
+html[it-theme]:not([it-theme=default]) ytd-browse-view,
 html[it-theme]:not([it-theme=default]) ytd-watch-flexy,
 html[it-theme]:not([it-theme=default]) #page,
 html[it-theme]:not([it-theme=default]) #content { background-color: var(--yt-spec-base-background) !important; };
@@ -746,6 +746,64 @@ html[it-theme]:not([it-theme=default]):not([it-theme=dark]) a.yt-simple-endpoint
 /* Actually this above line is wrong. Default behavior is to have #tags near the views and upload date have two different colors depending if the video detail is expanded or not, but I don't know how to replicate that.*/
 html[it-theme]:not([it-theme=default]):not([it-theme=dark]) yt-formatted-string[has-link-only_]:not([force-default-style]) a.yt-simple-endpoint.yt-formatted-string {color: var(--yt-spec-text-primary) !important}
 html[it-theme]:not([it-theme=default]):not([it-theme=dark]) .yt-core-attributed-string--highlight-text-decorator .yt-core-attributed-string__link--display-type {color: var(--yt-spec-text-primary)}
+
+/*DARK*/
+html[it-theme=dark] [dark],
+html[it-theme=dark]:not([it-schedule=system_peference_dark]):not([it-schedule=system_peference_light]),
+html[it-theme=dark][data-system-color-scheme=dark][it-schedule=system_peference_dark],
+html[it-theme=dark][data-system-color-scheme=light][it-schedule=system_peference_light] {
+	--yt-swatch-primary: #000 !important;
+	--yt-swatch-primary-darker: #000 !important;
+	--yt-swatch-text: rgb(255, 255, 255) !important;
+	--yt-swatch-important-text: rgb(255, 255, 255) !important;
+	--yt-swatch-input-text: rgba(255, 255, 255, 1) !important;
+	--yt-swatch-textbox-bg: rgba(19, 19, 19, 1) !important;
+	--yt-swatch-logo-override: rgb(255, 255, 255) !important;
+	--yt-swatch-icon-color: rgba(136, 136, 136, 1) !important;
+	--yt-swatch-header-primary: #000;
+	--yt-spec-base-background: #000 !important;
+	--yt-spec-raised-background: #000 !important;
+	--yt-spec-menu-background: #000 !important;
+	--yt-spec-inverted-background: #fff;
+	--yt-spec-brand-background-solid: #000 !important;
+	--yt-spec-brand-background-primary: rgba(0, 0, 0, .98) !important;
+	--yt-spec-brand-background-secondary: rgba(0, 0, 0, .95) !important;
+	--yt-spec-general-background-a: #000 !important;
+	--yt-spec-general-background-b: #000 !important;
+	--yt-spec-general-background-c: #000 !important;
+	--yt-spec-error-background: #1f1f1f !important;
+	--yt-spec-text-primary: #aaa;
+	--yt-spec-text-primary-inverse: #000 !important;
+	--yt-spec-text-secondary: #aaa !important;
+	--yt-spec-text-disabled: #aaa !important;
+	--yt-spec-call-to-action: #0073e6 !important;
+	--yt-spec-icon-active-other: #aaa !important;
+	--yt-spec-icon-inactive: #aaa !important;
+	--yt-spec-icon-disabled: #aaa !important;
+	--yt-spec-badge-chip-background: rgba(0, 0, 0, .05) !important;
+	--yt-spec-verified-badge-background: rgba(0, 0, 0, .15) !important;
+	--yt-spec-suggested-action: var(--yt-spec-10-percent-layer) !important;
+	--yt-spec-button-chip-background-hover: rgba(0, 0, 0, .10) !important;
+	--yt-spec-touch-response: #000 !important;
+	--yt-spec-filled-button-text: #aaa !important;
+	--yt-spec-call-to-action-inverse: #aaa !important;
+	--yt-spec-brand-icon-active: #aaa !important;
+	--yt-spec-brand-icon-inactive: #aaa !important;
+	--yt-spec-brand-button-background: #242424 !important;
+	--yt-spec-brand-link-text: #aaa !important;
+	--yt-spec-filled-button-focus-outline: rgba(0, 0, 0, .60) !important;
+	--yt-spec-call-to-action-button-focus-outline: rgba(0, 0, 0, .30) !important;
+	--yt-spec-brand-text-button-focus-outline: rgba(204, 0, 0, .30) !important;
+	--yt-spec-inactive-text-button-focus-outline: #aaa !important;
+	--yt-spec-brand-subscribe-button-background: #aaa !important;
+	--yt-spec-wordmark-text: #aaa !important;
+	--yt-spec-10-percent-layer: #242424 !important;
+	--yt-spec-selected-nav-text: #aaa !important;
+	--yt-spec-themed-blue: #065fd4 !important;
+	--yt-spec-themed-green: #107516 !important;
+	--yt-frosted-glass-desktop: #000000cc !important;
+	background-color: var(--yt-spec-base-background)!important;
+}
 
 /*BLACK*/
 html[it-theme=black] [dark],
